# CPlus_complete_learning_path

./: CMakeLists.txt  README.md  test  upgrade.sh
Complete Learning Path/Dynamic Memory Allocation/: #1_malloc.c  #2_calloc.c  #3_realloc.c  CMakeLists.txt  init.sh
Complete Learning Path/Dynamic Memory Allocation/files/: valgrid_commands.txt
Complete Learning Path/Dynamic Memory Allocation/include/: dynamic_functions.h
Complete Learning Path/Dynamic Memory Allocation/src/: dynamic_functions.c
Complete Learning Path/Pointers/: #1_declaration_&_usage.c  #2_dereferencing.c  #3_pointer_arithmetic.c  #4_void_pointer.c  CMakeLists.txt  init.sh
Complete Learning Path/Pointers/include/: functions_definitions.h
Complete Learning Path/Pointers/src/: functions_definitions.c
Labyrinth solver/: test
Labyrinth solver/Maps/: Map6.txt  Map8.txt
Labyrinth solver/app/: main.c
Labyrinth solver/include/: MapHeader.h  Util.h
Labyrinth solver/src/: MapDefinition.c  MenusDefinition.c  Util.c
Maps/: Map1.txt  Map2.txt  Map3.txt  Map4.txt  Map5.txt
Projects/#1 Labyrinth solver using FSM (Finite State Machine)/: CMakeLists.txt  main.c
Projects/#2 Email Addresses Validation Using DFA (Deterministic Finite Automaton)/: CMakeLists.txt  main.c
Projects/#3 Application of PageRank Algorithm/: CMakeLists.txt  README.md  group_3.txt  main.c  number_name_equivalence.txt  research_papers_on_hand-drawn_circuit_recognizer.csv  test
Projects/#3 Application of PageRank Algorithm/csvToGraph/: PruebaChiquita.csv  csvPapersToGraph.ipynb  number_name_equivalence.csv
Projects/#3 Application of PageRank Algorithm/data/: group_1_matrix.txt  group_2(graph).txt  group_2(matrix).txt  group_3_matrix.txt  reference_graph.txt
Projects/#3 Application of PageRank Algorithm/groups/: group_1.txt
Projects/#3 Application of PageRank Algorithm/include/: AdjacencyMatrixHeader.h  GraphHeader.h  MatrixOperationsHeader.h  MenusHeader.h  MetricsHeader.h  NumberNameEquivalenceHeader.h  PageRankAlgorithmHeader.h  TransitionMatrixHeader.h  graph.h
Projects/#3 Application of PageRank Algorithm/results/: papers_ranking.csv  papers_ranking_relevance_factor.csv  students_ranking.csv
Projects/#3 Application of PageRank Algorithm/src/: AdjacencyMatrixDefinition.c  GraphDefinition.c  MatrixOperationsDefinition.c  MenusDefinition.c  MetricsDefinition.c  NumberNameEquivalenceDefinition.c  PageRankAlgorithmDefinition.c  TransitionMatrixDefinition.c  UtilDefinition.c  graph.c
Projects/#3 Application of PageRank Algorithm/validation_metrics/: relevance_factory.csv
Projects/Second practice/: main.c  (+1 more)
app/: main.c
include/: AdventurerHeader.h  MapHeader.h  MazeRunnerHeader.h  Util.h
src/: AdventurerDefinition.c  MapDefinition.c  MazeRunnerDefinition.c  MenusDefinition.c
(+47 files in other folders)
